# Desafio-TECSCI

./: .coveragerc  Dockerfile  README.md  aliases.sh  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 5e49a9b18287_create_plants_table.py  c4f970b8d55b_create_inverters_table.py  e8adb97382fb_create_metrics_table.py
src/api/: main.py  models.py  schemas.py
src/api/routers/v1/: inverters.py  metrics.py  plants.py
src/api/scripts/: seeds.py
src/app/: main.py  models.py  schemas.py
src/app/routers/v1/: inverters.py  metrics.py  plants.py
src/config/: database.py  settings.py
src/scripts/: seeds.py
tests/: conftest.py  test_inverters.py  test_metrics.py  test_plants.py
tests/requests/: test_inverters.py  test_main.py  test_metrics.py  test_plants.py
